2013-11-27  Raymond Penners  <raymond.penners@intenct.nl>

	* facebook: Added a new setting: VERIFIED_EMAIL.

	* socialaccount: a collision on e-mail address when you sign up
	using a third party social account is now more clearly explained:
	"An account already exists with this e-mail address.  Please sign
	in to that account first, then connect your Google account".

2013-11-26  Raymond Penners  <raymond.penners@intenct.nl>

	* account: You are now automatically logged in after confirming
	your e-mail address during sign up.

2013-11-23  Raymond Penners  <raymond.penners@intenct.nl>

	* account: The `/accounts/login/` view now supports AJAX requests.

	* account: Instead of directly rendering and returning a template,
	logging in while the account is inactive or not yet confirmed now
	redirects to two new views: `/accounts/inactive/` respectively
	`/accounts/confirm-email/`.

	* account: The `account/verification_sent.html` template no longer
	receives the e-mail address in the context (`email`). Note that a
	message containing that e-mail address is still emitted using the
	messages framework.

	* account: The `/accounts/confirm_email/key/` view has been
	renamed to `/accounts/confirm-email/` (human
	friendlier). Redirects are in place to handle old still pending
	confirmations.

2013-11-22  Raymond Penners  <raymond.penners@intenct.nl>

	* facebook: The fbconnect.js script is now more pluggable.

2013-11-18  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Dropped django-avatar support.

2013-11-17  Raymond Penners  <raymond.penners@intenct.nl>

	* openid: First, last and full name are now also queried together
	with the e-mail address. Thanks, @andrvb.

	* openid: Compatibility fix for Django 1.6 (JSON serializer).

	* account: Added support for `ACCOUNT_CONFIRM_EMAIL_ON_GET`.

2013-11-16  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.14.2 released.

	* Compatibility fix for logging in with Django 1.6.
