@@ -5,10 +5,12 @@ from django.core.urlresolvers import reverse
 from django.core.exceptions import ValidationError
 
 from ..utils import (import_attribute,
+                     email_address_exists,
                      valid_email_or_none)
 from ..account.utils import user_email, user_username, user_field
 from ..account.models import EmailAddress
 from ..account.adapter import get_adapter as get_account_adapter
+from ..account import app_settings as account_settings
 from ..account.app_settings import EmailVerificationMethod
 
 from . import app_settings
@@ -107,6 +109,32 @@ class DefaultSocialAccountAdapter(object):
                                                verified=True).count() == 0:
                     raise ValidationError(_("Your account has no verified"
                                             " e-mail address."))
+
+    def is_auto_signup_allowed(self, request, sociallogin):
+        # If email is specified, check for duplicate and if so, no auto signup.
+        auto_signup = app_settings.AUTO_SIGNUP
+        if auto_signup:
+            email = user_email(sociallogin.account.user)
+            # Let's check if auto_signup is really possible...
+            if email:
+                if account_settings.UNIQUE_EMAIL:
+                    if email_address_exists(email):
+                        # Oops, another user already has this address.  We
+                        # cannot simply connect this social account to the
+                        # existing user. Reason is that the email adress may
+                        # not be verified, meaning, the user may be a hacker
+                        # that has added your email address to his account in
+                        # the hope that you fall in his trap.  We cannot check
+                        # on 'email_address.verified' either, because
+                        # 'email_address' is not guaranteed to be verified.
+                        auto_signup = False
+                        # FIXME: We redirect to signup form -- user will
+                        # see email address conflict only after posting
+                        # whereas we detected it here already.
+            elif app_settings.EMAIL_REQUIRED:
+                # Nope, email is required and we don't have it yet...
+                auto_signup = False
+        return auto_signup
 
     def is_open_for_signup(self, request, sociallogin):
         """
